@@ -85,8 +85,8 @@ MOD_ARTICLES_CATEGORY_OPTION_MONTHYEAR_VALUE="Month and Year"
 MOD_ARTICLES_CATEGORY_OPTION_NORMAL_VALUE="Normal"
 MOD_ARTICLES_CATEGORY_OPTION_OFF_VALUE="Off"
 MOD_ARTICLES_CATEGORY_OPTION_ONLYFEATURED_VALUE="Only"
-MOD_ARTICLES_CATEGORY_OPTION_ORDERING_VALUE="Joomla! Ordering"
-MOD_ARTICLES_CATEGORY_OPTION_ORDERINGFEATURED_VALUE="Featured Ordering"
+MOD_ARTICLES_CATEGORY_OPTION_ORDERING_VALUE="Article Manager Order"
+MOD_ARTICLES_CATEGORY_OPTION_ORDERINGFEATURED_VALUE="Featured Articles Order"
 MOD_ARTICLES_CATEGORY_OPTION_RELATIVEDAY_VALUE="Relative Date"
 MOD_ARTICLES_CATEGORY_OPTION_STARTPUBLISHING_VALUE="Start Publishing Date"
 MOD_ARTICLES_CATEGORY_OPTION_FINISHPUBLISHING_VALUE="Finish Publishing Date"
